--- a/app/views/organizations/download_performance_template.csv.erb
+++ b/app/views/organizations/download_performance_template.csv.erb
@@ -5,6 +5,6 @@ csv_lib = RUBY_VERSION =~ /^1.8/ ? FasterCSV : CSV
 csv_output = csv_lib.generate(headers: true) do |csv|
   csv << ["Athlete ID", "Last Name", "First Name", "Groups", resource.metrics.map(&:to_s) ].flatten
   resource.users.each do |user|
-    csv << [user.id, user.last_name, user.first_name].flatten
+    csv << [user.id, user.last_name, user.first_name, user.assigned_groups.map{|ag| "#{ag.division}:#{ag.group}"}.join(", ")].flatten
   end
 end -%><%= csv_output.html_safe %>
