--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -10,8 +10,8 @@
     </ul>
   </div>  
   
-  <div class="span6 btn-group">
-    <%= link_to t('metrics'), [:dashboard, @division], :class => 'btn ' if can? :update, @division %>
+  <div class="span6">
+    <%= link_to t('metrics'), [:dashboard, parent, resource], :class => 'btn ' if can? :update, @division %>
     <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_division_path(@division), :class => 'btn ' if can? :update, @division %>
     <%= link_to t('create_new_group'), new_division_group_path(@division), :class => 'btn btn-primary '  if can? :create, Group %>
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -22,50 +22,204 @@
   </div>
 <% end %>
 
+<div class="accordion" id="accordion">
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <h4 class="accordion-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseUsers">
+          <%=t 'athletes' %>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseUsers" class="accordion-collapse collapse in">
+      <div class="accordion-body">
+        <div class="row-fluid topper">
+          <div class="letter-pagination scroll-pane span8">
+            <div class="pagination pagination-small nowrap">
+              <ul>
+                <% %w(a b c d e f g h i j k l m n o p q r s t u v w x y z).each do |letter| %>
+                  <li class="<%= (params[:letter].to_s == letter ? 'active' : '') %>"><%= link_to letter.upcase, params.merge(letter: letter) %></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        
+          <div class="span4">
+            <form class="form-inline pull-right" action="" method="get" style="margin-right: 20px;">
+              <div class="input-append">
+                <input type="text" name="record_date" class="base-date datepicker input-small" value="<%= params[:record_date].strftime('%m/%d/%Y') %>" />
+                <input type="submit" class="btn btn-primary" value="Change Date" />
+              </div>
+            </form>
+            
+            <div class="btn-group pull-right" style="margin-right: 20px;">
+              <a class="btn btn-primary global-submit" href="#">Submit</a>
+              <a class="btn btn-primary" href="#upload-modal" data-toggle="modal">Upload</a>
+            </div>
+            <div style="clear:both;"></div>
+          </div>
+        </div>
+        <div class="scroll-pane">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th nowrap>Athlete ID</th>
+                <th nowrap><%= model_class.human_attribute_name(:last_name) %></th>
+                <th nowrap><%= model_class.human_attribute_name(:first_name) %></th>
+                <th nowrap>Groups</th>
+                <% resource.metrics.each do |metric| %>
+                  <th nowrap><%= link_to metric, [:edit,resource.organization,metric] %></th>
+                <% end %>
+                <!-- <th><%=t '.actions', :default => t("helpers.actions") %></th> -->
+              </tr>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <td><%= link_to user.id, user %></td>
+                  <td><%= link_to user.last_name, user %></td>
+                  <td><%= link_to user.first_name, user %></td>
+                  <td><%= user.assigned_groups.map{|ag| "#{ag.division}:#{ag.group}"}.join(", ") %></td>
+                  <% resource.metrics.each do |metric| %>
+                    <% recorded_metric = metric.recorded_metrics.where{ (recorded_on == my{params[:record_date].to_date}) & (user_id == my{user.id}) }.first %>
+                    <td class="metric">
+                      <%= simple_form_for [user,(recorded_metric||RecordedMetric.new)], :html => { :class => 'form-inline' } do |f| %>
+                        <%= f.input :metric_id, as: :hidden, input_html: {value: metric.id} %>
+                        <% if metric.metric_type.name == 'Text' %>
+                          <%= f.input :value, label: false %>
+                        <% else %>
+                          <%= f.input :value, label: false, input_html: {type: :number, step: ".01", class: "input-mini"} %>
+                        <% end %>
+                        <%= f.input :recorded_on, as: :hidden, input_html: {value: params[:record_date].strftime('%m/%d/%Y'), class: 'datepicker'} %>
+                      <% end %>
+                    </td>
+                  <% end %>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+        
+        <div class="form-actions">
+          <a class="btn btn-primary global-submit" href="#">Submit</a>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <h4 class="accordion-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#leaderboard-today">
+          <%=t 'todays_leaderboard' %>
+        </a>
+      </h4>
+    </div>
+    <div id="leaderboard-today" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th><%=t 'rank' %></th>
+              <th><%=t 'name' %></th>
+              <th><%=t 'score' %></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @division.users.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
+              <tr>
+                <td><%= i+1 %></td>
+                <td><%= user %></td>
+                <td><%= user.completed_surveys.where{ date == my{@division.today} }.try(:first).try(:score) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <h4 class="accordion-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#leaderboard-alltime">
+          <%=t 'alltime_leaderboard' %>
+        </a>
+      </h4>
+    </div>
+    <div id="leaderboard-alltime" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th><%=t 'rank' %></th>
+              <th><%=t 'name' %></th>
+              <th><%=t 'average' %></th>
+              <th><%=t 'total' %></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @division.users.active.where{ average != nil }.reorder{ [average.desc,score.desc] }.each_with_index do |user,i| %>
+              <tr>
+                <td><%= i+1 %></td>
+                <td><%= user %></td>
+                <td><%= number_with_precision(user.average||0.00,precision: 2) %></td>
+                <td><%= user.score %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 
-<div class="row-fluid">
-  <div class="span6">
-    <h3><%=t ('todays_leaderboard') %></h3>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th><%=t 'rank' %></th>
-          <th><%=t 'name' %></th>
-          <th><%=t 'score' %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @division.users.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
+
+<div id="upload-modal" class="modal hide fade">
+  <%= form_tag(upload_performance_data_organization_division_path(parent,resource), method: :put, multipart: true, class: 'horizontal') do %>
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>Upload Performance Data</h3>
+    </div>
+    <div class="modal-body">
+      <div class="control-group">
+        <label class="control-label" for="recorded_date">Date Recorded</label>
+        <div class="controls">
+          <input type="text" class="datepicker" id="recorded_date" name="recorded_date" value="<%=l params[:record_date], format: :picker %>">
+        </div>
+      </div>
+      
+      <div class="control-group">
+        <label class="control-label" for="end_date">File</label>
+        <div class="controls">
+          <%= file_field_tag 'file', accept: 'text/csv' %>
+          <span class="help-block">File must be in 'CSV' format</span>
+        </div>
+      </div>
+    </div>
+    <div class="alert alert-block alert-error" style="overflow:scroll;">
+      <h4>Heads Up!</h4>
+      <p>Your spreadsheet must be formatted properly or you will cause a bunch of problems!</p>
+      <p>Your spreadsheet should match the following format and column order. Do not upload your file if it doesn't match this format!</p>
+      <table class="table table-striped table-condensed">
+        <tbody>
           <tr>
-            <td><%= i+1 %></td>
-            <td><%= user %></td>
-            <td><%= user.completed_surveys.where{ date == my{@division.today} }.try(:first).try(:score) %></td>
+            <td nowrap>Athlete ID</td>
+            <td nowrap>Last Name</td>
+            <td nowrap>First Name</td>
+            <td nowrap>Groups</td>
+            <% resource.metrics.each do |metric| %>
+              <td nowrap><%= metric %></td>
+            <% end %>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <div class="span6">
-    <h3><%=t ('alltime_leaderboard') %></h3>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th><%=t 'rank' %></th>
-          <th><%=t 'name' %></th>
-          <th><%=t 'average' %></th>
-          <th><%=t 'total' %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @division.users.active.where{ average != nil }.reorder{ [average.desc,score.desc] }.each_with_index do |user,i| %>
-          <tr>
-            <td><%= i+1 %></td>
-            <td><%= user %></td>
-            <td><%= number_with_precision(user.average||0.00,precision: 2) %></td>
-            <td><%= user.score %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+        </tbody>
+      </table>
+      <%= link_to "Download Template", download_performance_template_organization_division_path(parent,resource,'csv'), class: 'btn btn-danger' %>
+    </div>
+
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-primary">Upload Data</button>
+    </div>
+  <% end %>
 </div>
