--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -120,8 +120,11 @@
               <%= content_for(:breadcrumb) %>
             </div>
           <% end %>
-          
-          <%= yield %>
+          <div class="row-fluid">
+            <div class="span12">
+              <%= yield %>
+            </div>
+          </div>
         </div>
         <footer>
         </footer>
