adds change of date and remove user from graphs

--- a/app/views/organizations/dashboard.html.erb
+++ b/app/views/organizations/dashboard.html.erb
@@ -9,7 +9,7 @@
   
 <% end %>
 
-<form action="">
+<form id="entity" data-variable="organization_id" data-value="<%= resource.id %>" action="">
   <div class="row-fluid">
     <div class="span2">
       <select multiple id="available" size="7" style="width: 100%;">
