adds bar graphs

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -51,7 +51,7 @@
             <div class="span4">
               <form class="form-inline pull-right" action="" method="get" style="margin-right: 20px;">
                 <div class="input-append">
-                  <input type="text" name="record_date" class="base-date datepicker input-small" value="<%= params[:record_date].strftime('%m/%d/%Y') %>" />
+                  <input type="text" id="record-date" name="record_date" class="base-date datepicker input-small" value="<%= params[:record_date].strftime('%m/%d/%Y') %>" />
                   <input type="submit" class="btn btn-primary" value="Change Date" />
                 </div>
               </form>
