adds notes and focus graph

--- a/app/views/organizations/_line_graph.html.erb
+++ b/app/views/organizations/_line_graph.html.erb
@@ -13,10 +13,11 @@ var _<%= metric.name.parameterize.underscore %> = function(){
   return _<%= metric.name.parameterize.underscore %>_data;
 };
 var _<%= metric.name.parameterize.underscore %>_labels = [{label: '<%= resource.to_s %> Average'}];
+var _<%= metric.name.parameterize.underscore %>_is_focus = <%= metric.id.to_s == params[:focus_graph].to_s ? 'true' : 'false' %>;
 //var _<%= metric.name.parameterize.underscore %>_min = '<%= dates.first.try(:strftime,'%Y-%m-%d') %>';
 //var _<%= metric.name.parameterize.underscore %>_max = '<%= dates.last.try(:strftime,'%Y-%m-%d') %>';
-var _<%= metric.name.parameterize.underscore %>_min = '<%= params[:start_date].try(:strftime,'%Y-%m-%d') %>';
-var _<%= metric.name.parameterize.underscore %>_max = '<%= params[:end_date].try(:strftime,'%Y-%m-%d') %>';
+var _<%= metric.name.parameterize.underscore %>_min = '<%= DateTime.strptime(params[:start_date],'%m/%d/%Y').try(:strftime,'%Y-%m-%d') %>';
+var _<%= metric.name.parameterize.underscore %>_max = '<%= DateTime.strptime(params[:end_date],'%m/%d/%Y').try(:strftime,'%Y-%m-%d') %>';
 </script>
 <div data-graph-title="<%= metric %>" class="graph" id="graph-<%= metric.id %>" data-variable-name="_<%= metric.name.parameterize.underscore %>">
 
