--- a/app/views/organizations/dashboard.html.erb
+++ b/app/views/organizations/dashboard.html.erb
@@ -53,6 +53,7 @@
       <select name="graph_type" id="graph-type" class="input-small">
         <option value="line" <%= params[:graph_type] == 'line' ? 'selected="selected"' : '' %>>Line</option>
         <option value="bar" <%= params[:graph_type] == 'bar' ? 'selected="selected"' : '' %>>Bar</option>
+        <option value="bar" <%= params[:graph_type] == 'table' ? 'selected="selected"' : '' %>>Notes</option>
       </select>
     </div>
     
@@ -67,16 +68,46 @@
   </div>
 </form>
 
-<% groups_of = 1 %>
+<% groups_of = 3 %>
 <script>
 var _metrics = [];
 </script>
-<% resource.metrics.joins{ metric_type }.where{ metric_type.name != 'Text' }.in_groups_of(groups_of) do |metrics| %>
+
+<% if @focus_metric.present? %>
+  <div id="focus-graph" class="row-fluid">
+    <div class="span10" id="chart-target">
+      <h4><%= @focus_metric %></h4>
+      <% if @focus_metric.metric_type.name == 'Text' %>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Athlete</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% resource.recorded_metrics.where{ metric_id == my{@focus_metric.id}}.each do |recorded_metric| %>
+              <td><%= recorded_metric.recorded_on %></td>
+              <td><%= recorded_metric.user %></td>
+              <td><%= recorded_metric.value %></td>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+        <%= render partial: "#{params[:graph_type]}_graph", locals: {metric: @focus_metric} %>
+      <% end %>
+    </div>
+    <div class="span2"></div>
+  </div>
+<% end %>
+
+<% @metrics.in_groups_of(groups_of) do |metrics| %>
   <div class="row-fluid">
     <% metrics.each do |metric| %>
-      <div class="span<%= 12/groups_of %>">
+      <div class="graph-holder span<%= 12/groups_of %>">
         <% if metric.present? %>
-          <h4><%= metric %></h4>
+          <h4><%= link_to(metric, params.merge(focus_graph: metric.id)) %></h4>
           <%= metric.note.present? ? simple_format(metric.note) : "<br />".html_safe %>
           <% if metric.metric_type.name == 'Text' || metric.name == "Groups" %>
             <table class="table table-striped">
